--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
     - name: Get Secrets from Key Vault
-      uses: actions/get-keyvault-secrets
+      uses: Azure/get-keyvault-secrets@v1.0
       with:
         keyvault: ${{ secrets.KEY_VAULT_NAME }}
         secrets: 'IntegrationTest--ApiAppIdUri, IntegrationTest--AppAuthentication--ClientId, IntegrationTest--AppAuthentication--ClientSecret, IntegrationTest--Authority, IntegrationTest--UserAuthentication--ClientId, IntegrationTest--UserAuthentication--ClientSecret, IntegrationTest--UserAuthentication--Password, IntegrationTest--UserAuthentication--TokenUrl, IntegrationTest--UserAuthentication--Username'
