--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,7 @@ steps:
     AZURE_CREDENTIALS: $(AZURE_CREDENTIALS)
 
 - task: PublishTestResults@2
+  displayName: Publish test results
   condition: succeededOrFailed()
   inputs:
     testRunner: VSTest
